build/log/idf_py_stdout_output_37712
Command: ninja flash
[1/11] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\marti\Documents\esp-projects\tradfri_controller\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.5/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/marti/Documents/esp-projects/tradfri_controller/build/bootloader/bootloader.bin"
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building C object esp-idf/fried_tradfri_client/CMakeFiles/__idf_fried_tradfri_client.dir/src/fried_tradfri_client.c.obj
FAILED: esp-idf/fried_tradfri_client/CMakeFiles/__idf_fried_tradfri_client.dir/src/fried_tradfri_client.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/marti/Documents/esp-projects/tradfri_controller/build/config -IC:/Users/marti/Documents/esp-projects/.libraries/fried_tradfri_client/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.5/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.5/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.5/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/debug_probe/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/mspi_timing_tuning/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/power_supply/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/heap/tlsf -IC:/Espressif/frameworks/esp-idf-v5.5/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.5/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/soc/esp32/register -IC:/Espressif/frameworks/esp-idf-v5.5/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_rom/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_rom/esp32/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.5/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.5/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.5/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.5/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.5/components/lwip/port/esp32xx/include/sys -IC:/Users/marti/Documents/esp-projects/.libraries/fried_coaps_client/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_wifi/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_wifi/include/local -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_wifi/wifi_apps/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_wifi/wifi_apps/nan_app/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_event/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_phy/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_phy/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_netif/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/esp_partition/include -IC:/Users/marti/Documents/esp-projects/tradfri_controller/managed_components/espressif__coap/port/include -IC:/Users/marti/Documents/esp-projects/tradfri_controller/managed_components/espressif__coap/libcoap/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/mbedtls/port/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/mbedtls/mbedtls/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/mbedtls/mbedtls/library -IC:/Espressif/frameworks/esp-idf-v5.5/components/mbedtls/esp_crt_bundle/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/mbedtls/mbedtls/3rdparty/everest/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/mbedtls/mbedtls/3rdparty/p256-m -IC:/Espressif/frameworks/esp-idf-v5.5/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -IC:/Espressif/frameworks/esp-idf-v5.5/examples/common_components/protocol_examples_common/include -IC:/Users/marti/Documents/esp-projects/.libraries/fdata/include -IC:/Espressif/frameworks/esp-idf-v5.5/components/json/cJSON -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/marti/Documents/esp-projects/tradfri_controller=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.5=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/fried_tradfri_client/CMakeFiles/__idf_fried_tradfri_client.dir/src/fried_tradfri_client.c.obj -MF esp-idf\fried_tradfri_client\CMakeFiles\__idf_fried_tradfri_client.dir\src\fried_tradfri_client.c.obj.d -o esp-idf/fried_tradfri_client/CMakeFiles/__idf_fried_tradfri_client.dir/src/fried_tradfri_client.c.obj -c C:/Users/marti/Documents/esp-projects/.libraries/fried_tradfri_client/src/fried_tradfri_client.c
C:/Users/marti/Documents/esp-projects/.libraries/fried_tradfri_client/src/fried_tradfri_client.c: In function 'Tradfri_send':
C:/Users/marti/Documents/esp-projects/.libraries/fried_tradfri_client/src/fried_tradfri_client.c:21:45: error: 'FRIED_TRADFRI_GATEWAY_IP' undeclared (first use in this function)
   21 |     asprintf(&fullurl, "coaps://%s:5684%s", FRIED_TRADFRI_GATEWAY_IP, suburl);
      |                                             ^~~~~~~~~~~~~~~~~~~~~~~~
C:/Users/marti/Documents/esp-projects/.libraries/fried_tradfri_client/src/fried_tradfri_client.c:21:45: note: each undeclared identifier is reported only once for each function it appears in
C:/Users/marti/Documents/esp-projects/.libraries/fried_tradfri_client/src/fried_tradfri_client.c:27:53: error: 'FRIED_TRADFRI_IDENTITY' undeclared (first use in this function)
   27 |     char* result = CoAPsSend(method, wait, fullurl, FRIED_TRADFRI_IDENTITY, FRIED_TRADFRI_KEY, data, data_len);
      |                                                     ^~~~~~~~~~~~~~~~~~~~~~
C:/Users/marti/Documents/esp-projects/.libraries/fried_tradfri_client/src/fried_tradfri_client.c:27:77: error: 'FRIED_TRADFRI_KEY' undeclared (first use in this function)
   27 |     char* result = CoAPsSend(method, wait, fullurl, FRIED_TRADFRI_IDENTITY, FRIED_TRADFRI_KEY, data, data_len);
      |                                                                             ^~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
